cmake_minimum_required(VERSION 3.20)
project(Lab22)

set(CMAKE_CXX_STANDARD 23)

add_executable(Lab22 main.cpp Vector.cpp Vector.h Array.cpp Array.h Any.h String.cpp String.h boolArray.cpp boolArray.h arrayOfarrays.cpp arrayOfarrays.h intrerfaces.cpp intrerfaces.h)

#boolArray.cpp boolArray.h String.cpp String.h